--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <select id="ddKommuner"></select>
 <button id="pbFetchKommuner">Fyld dropdown</button>
 
+<br>
+
+<input type="text" id="searchKommune"></input>
+<div id="a-tags"></div>
 
 </body>
 <script src="js/kommuneDropdown.js"></script>
